Fixed spacing and sizing bugs

--- a/styles/faq.css
+++ b/styles/faq.css
@@ -1,7 +1,7 @@
 .faqwrapper {
     min-height: rem(650px);
     padding-bottom: 50px;
-    padding-top: 40px;
+    padding-top: 30px;
     text-align: center;
 }
 
